[package]
name = "lightborne"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
bevy = { version = "0.17.2", features = ["wav", "mp3", "serialize"] }
bytemuck = "1.24.0"
enum-map = "2.7.3"
itertools = "0.14.0"
noise = "0.9.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
avian2d = { version = "0.4.0", features = ["bevy_diagnostic"] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", rev = "refs/pull/372/head", features = ["atlas"] }
bevy_ecs_tilemap = "0.17.0"
thiserror = "2.0.17"

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[features]
dev_mode = ["bevy/bevy_dev_tools"]
